# Aut-Main

./: README.md
src/autonomy_main/: package.xml  setup.cfg  setup.py
src/autonomy_main/autonomy_main/: listener_node.py  my_node.py  publisher_node.py
src/rover30_description/: package.xml
src/rover30_description/launch/: display.launch  display.launch.py
src/rover30_description/meshes/: kolo.stl
src/rover30_description/urdf/: interial_macros.xacro  lidar.xacro  rover30.sdf  rover30.urdf  rover30.urdf.xacro  rover30_core.xacro
src2/autonomy_main/: package.xml
src2/rover30_description/: CMakeLists.txt  package.xml
src2/rover30_description/launch/: display.launch.py
src2/rover30_description/meshes/: kolo.stl
src2/rover30_description/models/rover30/: model.config
src2/rover30_description/urdf/: interial_macros.xacro  lidar.xacro  rover30.urdf.xacro  rover30_core.xacro  rover30_gz.xacro
